--- a/src/main/webapp/newSequence.xhtml
+++ b/src/main/webapp/newSequence.xhtml
@@ -147,14 +147,15 @@
                             </p:selectOneMenu>
                         </h:panelGroup>
 
-                        <h:panelGroup id="applicationActivityPanel">
-                            <div class="modal-header">
-                                <h3>Activité d'application de connaissances</h3>
-                            </div>
-                        </h:panelGroup>
+
                         <h:panelGroup/> 
                     </h:panelGrid>
                 </h:panelGroup> 
+                <h:panelGroup id="applicationActivityPanel">
+                    <div class="modal-header">
+                        <h3>Activité d'application de connaissances</h3>
+                    </div>
+                </h:panelGroup>
                 <h:panelGroup>
                     <p:inputTextarea id="seqKnowledgeApp" required="true" 
                                      value="#{sequenceBean.knowledgeApp}" 
@@ -164,8 +165,25 @@
                                      maxlength="1250"
                                      />
                     <p:watermark for="seqKnowledgeApp" 
-                                 value="Écrivez dans cette zone vos consignes de travail. (500 caractères)" />
+                                 value="Écrivez dans cette zone vos consignes de travail. (1250 caractères)" />
                     <p:message id="seqKnowledgeAppMessage" for="seqKnowledgeApp" /> 
+                </h:panelGroup>
+                <h:panelGroup id="explicationPanel">
+                    <div class="modal-header">
+                        <h3>Explication de la séquence</h3>
+                    </div>
+                </h:panelGroup>
+                <h:panelGroup>
+                    <p:inputTextarea id="seqExplication" required="true" 
+                                     value="#{sequenceBean.explication}" 
+                                     requiredMessage="Veuillez compléter le champ"
+                                     style="width: 100%; color: black"
+                                     autoResize="false"
+                                     maxlength="1250"
+                                     />
+                    <p:watermark for="seqExplication" 
+                                 value="Écrivez dans cette zone une explication de la séquence. (1250 caractères)" />
+                    <p:message id="seqExplicationMessage" for="seqExplication" /> 
                 </h:panelGroup>
                 <h:panelGroup>
                     <div class="form-actions">
