Added About Link and Page

--- a/src/main/webapp/about.xhtml
+++ b/src/main/webapp/about.xhtml
@@ -4,15 +4,11 @@
                 template="./WEB-INF/templates/default.xhtml">
 
     <ui:define name="title">
-        title
-    </ui:define>
-
-    <ui:define name="head">
-        head
+        À propos
     </ui:define>
 
     <ui:define name="content">
-        content
+        Icônes fournies par <a href="http://www.doublejdesign.co.uk/">http://www.doublejdesign.co.uk/</a>
     </ui:define>
 
 </ui:composition>
