--- a/src/main/webapp/teacherPage.xhtml
+++ b/src/main/webapp/teacherPage.xhtml
@@ -11,7 +11,10 @@
 
     <ui:define name="content">             
         <p class="text-justify">
-            Afin de créer une séquence il suffit d'utiliser les icônes qui sont dans la partie « séquences »et de suivre les instructions en cas de besoin d'aide, vous pouvez accéder à de l'aide en ligne. Vous pouvez :
+            Afin de créer une séquence il suffit d'utiliser les icônes qui sont 
+            dans la partie « séquences » et de suivre les instructions en cas 
+            de besoin d'aide, vous pouvez accéder à de l'aide en ligne. 
+            Vous pouvez :
         </p>
         <ul>
             <li>Créer une séquence ;</li>
