--- a/src/main/webapp/newSequence.xhtml
+++ b/src/main/webapp/newSequence.xhtml
@@ -186,8 +186,9 @@
                 </h:panelGroup>
                 <h:panelGroup>
                     <div class="form-actions">
+                        <h:button outcome="teacherPage" value="Retourner" class="btn btn-danger" style="margin-right:5%"/>
                         <h:commandButton action="#{sequenceBean.isSupports()}" 
-                                         value="Validez votre séquence" 
+                                         value="Suivant" 
                                          class="btn btn-danger"/>
                     </div>
                 </h:panelGroup>
