--- a/src/main/webapp/summary.xhtml
+++ b/src/main/webapp/summary.xhtml
@@ -4,7 +4,8 @@
                 template="./WEB-INF/templates/default.xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core">
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns="http://www.w3.org/1999/xhtml">
 
     <ui:define name="title">
         Nouvelle Séquence : Validation
@@ -156,14 +157,16 @@
                 </h:panelGroup>
                 <h:panelGroup>
                     <div class="form-actions">
+                        <h:button 
+                            outcome="#{sequenceBean.supports==true?'support':'newSequence'}" 
+                            value="Retourner" class="btn btn-danger" 
+                            style="margin-right:5%"/>
                         <h:commandButton action="#{sequenceBean.validateSequence()}" 
                                          value="Validez votre séquence" 
                                          class="btn btn-danger"/>
                     </div>
                 </h:panelGroup>
             </h:panelGrid>
-            <!--@TODO: Change the button "support" if necessary or not cute ;)-->
-            <!--@TODO: Add button go back if necessary -->
         </h:form>     
     </ui:define>
 
