Edited "modify" icon and fixed a button value
- Added 1 more page of icons

--- a/src/main/webapp/about.xhtml
+++ b/src/main/webapp/about.xhtml
@@ -8,7 +8,10 @@
     </ui:define>
 
     <ui:define name="content">
-        Icônes fournies par <a href="http://www.doublejdesign.co.uk/">http://www.doublejdesign.co.uk/</a>
+        Icônes fournies par <a href="http://www.doublejdesign.co.uk/">
+            http://www.doublejdesign.co.uk/</a> and 
+            <a href="http://www.iconsdb.com/soylent-red-icons/pencil-icon.html">
+                http://www.iconsdb.com/</a>
     </ui:define>
 
 </ui:composition>
