--- a/src/main/webapp/error.xhtml
+++ b/src/main/webapp/error.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
 
     <ui:define name="content">
-        Error, veuillez contacter l'administrateur du système
+        Erreur, veuillez contacter l'administrateur du système
     </ui:define>
 
 </ui:composition>
